bindings/haskell/cbits/panproto_glue.h

/* ---------- enriched ---------- */

int32_t pp_schema_add_coercion_at(
    uint32_t schema_handle,
    const uint8_t *from_kind_ptr,
    size_t from_kind_len,
    const uint8_t *to_kind_ptr,
    size_t to_kind_len,
    const uint8_t *expr_ptr,
    size_t expr_len,
    uint32_t *out_handle
);
int32_t pp_schema_add_default_at(
    uint32_t schema_handle,
    const uint8_t *vertex_name_ptr,
    size_t vertex_name_len,
    const uint8_t *expr_ptr,
    size_t expr_len,
    uint32_t *out_handle
);
int32_t pp_schema_add_merger_at(
    uint32_t schema_handle,
    const uint8_t *vertex_name_ptr,
    size_t vertex_name_len,
    const uint8_t *spec_ptr,
    size_t spec_len,
    uint32_t *out_handle
);
int32_t pp_schema_add_policy_at(
    uint32_t schema_handle,
    const uint8_t *vertex_name_ptr,
    size_t vertex_name_len,
    const uint8_t *spec_ptr,
    size_t spec_len,
    uint32_t *out_handle
);
int32_t pp_enriched_refinement_subsort_at(
    const uint8_t *base_sort_ptr,
    size_t base_sort_len,
    const uint8_t *sub_constraints_ptr,
    size_t sub_constraints_len,
    const uint8_t *super_constraints_ptr,
    size_t super_constraints_len,
    uint32_t *out_is_subsort
);
/* ---------- vcs ---------- */

int32_t pp_vcs_init_at(
    const uint8_t *protocol_name_ptr,
    size_t protocol_name_len,
    uint32_t *out_handle
);
int32_t pp_vcs_commit_at(
    uint32_t repo,
    const uint8_t *message_ptr,
    size_t message_len,
    const uint8_t *author_ptr,
    size_t author_len,
    Vec_uint8_t *out
);
int32_t pp_vcs_branch_at(
    uint32_t repo,
    const uint8_t *name_ptr,
    size_t name_len,
    Vec_uint8_t *out
);
int32_t pp_vcs_checkout_at(
    uint32_t repo,
    const uint8_t *target_ptr,
    size_t target_len,
    Vec_uint8_t *out
);
int32_t pp_vcs_merge_at(
    uint32_t repo,
    const uint8_t *branch_ptr,
    size_t branch_len,
    const uint8_t *author_ptr,
    size_t author_len,
    Vec_uint8_t *out
);
int32_t pp_vcs_diff_at(
    uint32_t repo,
    const uint8_t *from_ptr,
    size_t from_len,
    const uint8_t *to_ptr,
    size_t to_len,
    Vec_uint8_t *out
);
int32_t pp_vcs_blame_at(
    uint32_t repo,
    const uint8_t *vertex_ptr,
    size_t vertex_len,
    Vec_uint8_t *out
);
/* ---------- data ---------- */

int32_t pp_data_store_dataset_at(
    uint32_t schema_handle,
    const uint8_t *data_json_ptr,
    size_t data_json_len,
    uint32_t *out_handle
);
int32_t pp_data_migrate_backward_at(
    uint32_t dataset_handle,
    const uint8_t *complement_ptr,
    size_t complement_len,
    uint32_t src_schema,
    uint32_t tgt_schema,
    uint32_t *out_handle
);
int32_t pp_data_check_staleness_at(
    uint32_t dataset_handle,
    uint32_t schema_handle,
    Vec_uint8_t *out
);
int32_t pp_data_get_migration_complement_at(
    const uint8_t *complement_ptr,
    size_t complement_len,
    Vec_uint8_t *out
);
/* ---------- graph ---------- */

int32_t pp_graph_fiber_at_at(
    const uint8_t *instance_ptr,
    size_t instance_len,
    const uint8_t *migration_ptr,
    size_t migration_len,
    const uint8_t *target_anchor_ptr,
    size_t target_anchor_len,
    Vec_uint8_t *out
);
int32_t pp_graph_fiber_decomposition_at(
    const uint8_t *instance_ptr,
    size_t instance_len,
    const uint8_t *migration_ptr,
    size_t migration_len,
    Vec_uint8_t *out
);
int32_t pp_graph_poly_hom_at(
    const uint8_t *source_schema_ptr,
    size_t source_schema_len,
    const uint8_t *target_schema_ptr,
    size_t target_schema_len,
    Vec_uint8_t *out
);
int32_t pp_graph_preferred_path_at(
    const uint8_t *graph_ptr,
    size_t graph_len,
    const uint8_t *source_schema_ptr,
    size_t source_schema_len,
    const uint8_t *target_schema_ptr,
    size_t target_schema_len,
    Vec_uint8_t *out
);
int32_t pp_graph_conversion_distance_at(
    const uint8_t *graph_ptr,
    size_t graph_len,
    const uint8_t *source_schema_ptr,
    size_t source_schema_len,
    const uint8_t *target_schema_ptr,
    size_t target_schema_len,
    double *out_distance
);
int32_t pp_parse_file_at(
    uint32_t registry,
    const uint8_t *path_ptr,
    size_t path_len,
    const uint8_t *content_ptr,
    size_t content_len,
    uint32_t *out_handle
);
int32_t pp_parse_with_protocol_at(
    uint32_t registry,
    const uint8_t *protocol_ptr,
    size_t protocol_len,
    const uint8_t *content_ptr,
    size_t content_len,
    const uint8_t *file_path_ptr,
    size_t file_path_len,
    uint32_t *out_handle
);
int32_t pp_parse_detect_language_at(
    uint32_t registry,
    const uint8_t *path_ptr,
    size_t path_len,
    Vec_uint8_t *out
);
int32_t pp_parse_emit_at(
    uint32_t registry,
    const uint8_t *protocol_ptr,
    size_t protocol_len,
    uint32_t schema,
    Vec_uint8_t *out
);
int32_t pp_parse_emit_pretty_at(
    uint32_t registry,
    const uint8_t *protocol_ptr,
    size_t protocol_len,
    uint32_t schema,
    Vec_uint8_t *out
);
int32_t pp_parse_check_emit_parse_at(
    uint32_t registry,
    const uint8_t *protocol_ptr,
    size_t protocol_len,
    uint32_t schema,
    Vec_uint8_t *out
);
int32_t pp_parse_check_parse_emit_at(
    uint32_t registry,
    const uint8_t *protocol_ptr,
    size_t protocol_len,
    const uint8_t *bytes_ptr,
    size_t bytes_len,
    Vec_uint8_t *out
);
int32_t pp_project_add_file_at(
    uint32_t builder,
    const uint8_t *path_ptr,
    size_t path_len,
    const uint8_t *content_ptr,
    size_t content_len
);
int32_t pp_project_add_directory_at(
    uint32_t builder,
    const uint8_t *path_ptr,
    size_t path_len
);
int32_t pp_git_import_at(
    const uint8_t *repo_path_ptr,
    size_t repo_path_len,
    const uint8_t *revspec_ptr,
    size_t revspec_len,
    uint32_t *out_handle,
    Vec_uint8_t *out
);