bindings/haskell/cbits/panproto.h

/** \brief
 *  Same as [`Vec<T>`][`rust::Vec`], but with guaranteed `#[repr(C)]` layout
 */
typedef struct Vec_uint8 {
    /** <No documentation available> */
    uint8_t * ptr;

    /** <No documentation available> */
    size_t len;

    /** <No documentation available> */
    size_t cap;
} Vec_uint8_t;
/** \brief
 *  Retrieve a data set as CBOR-encoded instances.
 *
 *  `dataset_handle` is a [`Resource::DataSet`](crate::handle::Resource)
 *  handle. On success, `out` receives the CBOR-encoded
 *  `Vec<WInstance>`. The stored payload is decoded and re-encoded so a
 *  corrupt carrier surfaces as a serialization error rather than
 *  returning opaque bytes.
 */
int32_t
pp_data_get_dataset (
    uint32_t dataset_handle,
    Vec_uint8_t * out);
/** \brief
 *  Migrate a data set forward between two schemas.
 *
 *  `dataset_handle` is a data set handle; `src_schema` and `tgt_schema`
 *  are [`Resource::Schema`](crate::handle::Resource) handles.
 *  Auto-generates a lens via `lens::auto_generate`, applies `lens::get`
 *  per record, and stores both the migrated data set and the
 *  complement carrier as new
 *  [`Resource::DataSet`](crate::handle::Resource) handles, returned via
 *  `out_data_handle` and `out_complement_handle`. The migrated data
 *  set is hashed against the target schema; the complement carrier
 *  keeps the source schema id and holds the CBOR-encoded
 *  `Vec<Complement>` in its `data` field.
 */
int32_t
pp_data_migrate_forward (
    uint32_t dataset_handle,
    uint32_t src_schema,
    uint32_t tgt_schema,
    uint32_t * out_data_handle,
    uint32_t * out_complement_handle);
/** \brief
 *  List all available tree-sitter grammar languages enabled by feature
 *  flags.
 *
 *  On success, `out` receives a CBOR-encoded `Vec<String>` (sorted). The
 *  catalogue is registry-independent: it is read off a throwaway
 *  `ParserRegistry::new()`, which `panproto-parse` populates from
 *  `panproto_grammars::grammars()` (the set fixed by the compiled-in
 *  grammar group features). Reading it through a fresh registry keeps the
 *  list exactly in step with what `pp_parse_registry_new` would register,
 *  without `panproto-c` needing a direct `panproto-grammars` dependency.
 */
int32_t
pp_parse_available_grammars (
    Vec_uint8_t * out);
/** \brief
 *  List all protocol names registered in an AST registry.
 *
 *  `registry` is an AST-registry handle. On success, `out` receives a
 *  CBOR-encoded `Vec<String>` (sorted for a deterministic wire image, as
 *  the underlying `protocol_names` iterates an unordered map).
 */
int32_t
pp_parse_protocol_names (
    uint32_t registry,
    Vec_uint8_t * out);
/** \brief
 *  Construct a parser registry populated with all enabled grammars.
 *
 *  On success, `out_handle` receives a fresh
 *  [`Resource::AstRegistry`](crate::handle::Resource) handle wrapping a
 *  `ParserRegistry::new()`. The set of registered grammars is fixed by the
 *  crate's compiled-in grammar group features (the default `group-core`,
 *  or whatever the dependent build enables).
 */
int32_t
pp_parse_registry_new (
    uint32_t * out_handle);
/** \brief
 *  Assemble a project builder into a unified project schema.
 *
 *  `builder` is a project-builder handle. On success, `out_handle`
 *  receives a fresh [`Resource::ProjectSchema`](crate::handle::Resource)
 *  handle and the builder is logically consumed: its slab slot is left
 *  holding a fresh empty builder (`ProjectBuilder::new`), so the handle
 *  stays valid but carries no accumulated files. This mirrors the Python
 *  reference, which swaps in a fresh builder before taking ownership for
 *  `ProjectBuilder::build`.
 *
 *  A failed assembly (no files added, or a coproduct failure) surfaces as
 *  [`PpStatus::Operation`] and leaves the out-handle slot untouched.
 */
int32_t
pp_project_build (
    uint32_t builder,
    uint32_t * out_handle);
/** \brief
 *  Create an empty multi-file project builder.
 *
 *  On success, `out_handle` receives a fresh
 *  [`Resource::ProjectBuilder`](crate::handle::Resource) handle wrapping
 *  a `ProjectBuilder::new`. The out-handle slot is written only on
 *  success.
 */
int32_t
pp_project_builder_new (
    uint32_t * out_handle);
/** \brief
 *  Extract the file-to-protocol map from an assembled project.
 *
 *  `project` is a project-schema handle. On success, `out` receives a
 *  CBOR-encoded `HashMap<String, String>` mapping file paths (rendered
 *  via `Path::display`) to the protocol used to parse each, matching the
 *  Haskell `Panproto.Project.decodeProtocolMap` decoder.
 */
int32_t
pp_project_protocol_map (
    uint32_t project,
    Vec_uint8_t * out);
/** \brief
 *  Extract the unified schema from an assembled project.
 *
 *  `project` is a [`Resource::ProjectSchema`](crate::handle::Resource)
 *  handle. On success, `out_handle` receives a fresh
 *  [`Resource::Schema`](crate::handle::Resource) handle for the
 *  coproduct schema (cloned out of the project). The out-handle slot is
 *  written only on success.
 */
int32_t
pp_project_schema_get (
    uint32_t project,
    uint32_t * out_handle);
/** \brief
 *  Stage a schema in a VCS repository.
 *
 *  `repo` is a VCS repo handle; `schema` is a
 *  [`Resource::Schema`](crate::handle::Resource) handle. On success,
 *  `out` receives a CBOR-encoded add result carrying the staged schema's
 *  object id, whether a migration from HEAD was auto-derived, the
 *  validation verdict, and any validation messages. Calls
 *  `Repository::add`.
 */
int32_t
pp_vcs_add (
    uint32_t repo,
    uint32_t schema,
    Vec_uint8_t * out);
/** \brief
 *  List all branches and the commit each points at.
 *
 *  `repo` is a VCS repo handle. Calls `vcs::refs::list_branches` and
 *  reports the full branch listing as a CBOR-encoded branch result,
 *  tagging the branch HEAD currently tracks. An empty repository (no
 *  branches yet) yields an empty listing. This is the create-free
 *  listing op; `pp_vcs_branch` creates a branch and returns the same
 *  listing shape after the create.
 */
int32_t
pp_vcs_list_branches (
    uint32_t repo,
    Vec_uint8_t * out);
/** \brief
 *  Walk the commit log from HEAD.
 *
 *  `repo` is a VCS repo handle; `count` caps the walk length. On success,
 *  `out` receives a CBOR-encoded log result (a map with an `entries`
 *  list, newest first). Calls `Repository::log`. Each entry's
 *  `commit_id` is recomputed from the commit object via
 *  `vcs::hash::hash_commit` (the `CommitObject` does not carry its own
 *  id). An empty repository yields an empty entry list.
 */
int32_t
pp_vcs_log (
    uint32_t repo,
    uint32_t count,
    Vec_uint8_t * out);
/** \brief
 *  Stash the current staged schema.
 *
 *  `repo` is a VCS repo handle. Pushes the currently staged schema onto
 *  the stash stack via `vcs::stash::stash_push`, clears the staging
 *  index, and reports the new stash entry plus the full stack. On
 *  success, `out` receives a CBOR-encoded stash result.
 *
 *  Returns [`PpStatus::Operation`] when there is nothing staged to stash.
 */
int32_t
pp_vcs_stash (
    uint32_t repo,
    Vec_uint8_t * out);
/** \brief
 *  Pop the most recent stash entry.
 *
 *  `repo` is a VCS repo handle. Calls `vcs::stash::stash_pop`, restoring
 *  the schema staged in the popped stash into the index, then reports
 *  the restored schema id and the remaining stack as a CBOR-encoded
 *  stash-pop result.
 */
int32_t
pp_vcs_stash_pop (
    uint32_t repo,
    Vec_uint8_t * out);
/** \brief
 *  Get repository status (HEAD, staging, working state).
 *
 *  `repo` is a VCS repo handle. On success, `out` receives a
 *  CBOR-encoded status record: HEAD state, the resolved HEAD commit
 *  (absent for an empty repo), and `has_staged` / `working_dirty`
 *  booleans read from the staging index.
 */
int32_t
pp_vcs_status (
    uint32_t repo,
    Vec_uint8_t * out);