bindings/haskell/src/Panproto/Rust/FFI.hsc


-- | Attach a coercion (UTF-8 kinds plus CBOR expr) to a schema,
-- returning a fresh handle.
foreign import ccall safe "pp_schema_add_coercion_at"
    pp_schema_add_coercion_at
        :: Word32
        -> Ptr Word8 -> CSize
        -> Ptr Word8 -> CSize
        -> Ptr Word8 -> CSize
        -> Ptr Word32
        -> IO CInt

-- | Attach a default value expression to a schema vertex.
foreign import ccall safe "pp_schema_add_default_at"
    pp_schema_add_default_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- | Attach a merger spec to a schema vertex.
foreign import ccall safe "pp_schema_add_merger_at"
    pp_schema_add_merger_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- | Attach a conflict-resolution policy to a schema vertex.
foreign import ccall safe "pp_schema_add_policy_at"
    pp_schema_add_policy_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- | Decide whether one refinement sort is a subsort of another.
-- Writes @1@ or @0@ to the out-param.
foreign import ccall safe "pp_enriched_refinement_subsort_at"
    pp_enriched_refinement_subsort_at
        :: Ptr Word8 -> CSize
        -> Ptr Word8 -> CSize
        -> Ptr Word8 -> CSize
        -> Ptr Word32
        -> IO CInt

-- ---------------------------------------------------------------------------
-- VCS

-- | Initialize a VCS repository for a UTF-8 protocol name.
foreign import ccall safe "pp_vcs_init_at"
    pp_vcs_init_at :: Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- | Stage a schema into the repository, returning a CBOR add result.
foreign import ccall safe "pp_vcs_add"
    pp_vcs_add :: Word32 -> Word32 -> Ptr VecU8 -> IO CInt

-- | Commit with a UTF-8 message and author, returning a CBOR commit id.
foreign import ccall safe "pp_vcs_commit_at"
    pp_vcs_commit_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | CBOR @Vec\<VcsLogEntry\>@ for up to @count@ commits.
foreign import ccall safe "pp_vcs_log"
    pp_vcs_log :: Word32 -> Word32 -> Ptr VecU8 -> IO CInt

-- | CBOR status result for the repository.
foreign import ccall safe "pp_vcs_status"
    pp_vcs_status :: Word32 -> Ptr VecU8 -> IO CInt

-- | CBOR diff result for the repository between two UTF-8 refs. Empty
-- @from@ and @to@ slices select the HEAD-vs-parent diff; otherwise each
-- ref is resolved and its schema diffed.
foreign import ccall safe "pp_vcs_diff_at"
    pp_vcs_diff_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | CBOR branch-listing result for the repository: every branch and the
-- commit it points at, tagging the branch HEAD currently tracks. Takes
-- only the handle and a byte-buffer out-param, so it is imported
-- directly with no @*_at@ glue wrapper.
foreign import ccall safe "pp_vcs_list_branches"
    pp_vcs_list_branches :: Word32 -> Ptr VecU8 -> IO CInt

-- | Create a branch by UTF-8 name, returning the updated CBOR branch
-- listing.
foreign import ccall safe "pp_vcs_branch_at"
    pp_vcs_branch_at :: Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Check out a UTF-8 target, returning a CBOR op result.
foreign import ccall safe "pp_vcs_checkout_at"
    pp_vcs_checkout_at :: Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Merge a UTF-8 branch under a UTF-8 author, returning a CBOR merge
-- result. The author is recorded on the merge commit when one is created.
foreign import ccall safe "pp_vcs_merge_at"
    pp_vcs_merge_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | CBOR op result listing stashes.
foreign import ccall safe "pp_vcs_stash"
    pp_vcs_stash :: Word32 -> Ptr VecU8 -> IO CInt

-- | Pop a stash, returning a CBOR op result.
foreign import ccall safe "pp_vcs_stash_pop"
    pp_vcs_stash_pop :: Word32 -> Ptr VecU8 -> IO CInt

-- | Blame a UTF-8 vertex id, returning a CBOR blame result.
foreign import ccall safe "pp_vcs_blame_at"
    pp_vcs_blame_at :: Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- ---------------------------------------------------------------------------
-- Data

-- | Store a raw-JSON dataset against a schema, returning a fresh handle.
foreign import ccall safe "pp_data_store_dataset_at"
    pp_data_store_dataset_at :: Word32 -> Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- | CBOR @Vec\<WInstance\>@ for a dataset handle.
foreign import ccall safe "pp_data_get_dataset"
    pp_data_get_dataset :: Word32 -> Ptr VecU8 -> IO CInt

-- | Migrate a dataset forward, returning fresh data and complement handles.
foreign import ccall safe "pp_data_migrate_forward"
    pp_data_migrate_forward
        :: Word32 -> Word32 -> Word32 -> Ptr Word32 -> Ptr Word32 -> IO CInt

-- | Migrate a dataset backward through a CBOR complement, returning a
-- fresh handle.
foreign import ccall safe "pp_data_migrate_backward_at"
    pp_data_migrate_backward_at
        :: Word32 -> Ptr Word8 -> CSize -> Word32 -> Word32 -> Ptr Word32 -> IO CInt

-- | CBOR staleness report for a dataset against a schema.
foreign import ccall safe "pp_data_check_staleness_at"
    pp_data_check_staleness_at :: Word32 -> Word32 -> Ptr VecU8 -> IO CInt

-- | Round-trip a CBOR @Vec\<Complement\>@ for validation.
foreign import ccall safe "pp_data_get_migration_complement_at"
    pp_data_get_migration_complement_at :: Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- ---------------------------------------------------------------------------
-- Graph

-- | CBOR @Vec\<u32\>@ fiber of a CBOR instance at a UTF-8 anchor.
foreign import ccall safe "pp_graph_fiber_at_at"
    pp_graph_fiber_at_at
        :: Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | CBOR @HashMap\<String, Vec\<u32\>\>@ fiber decomposition.
foreign import ccall safe "pp_graph_fiber_decomposition_at"
    pp_graph_fiber_decomposition_at
        :: Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | CBOR hom schema between two CBOR schemas.
foreign import ccall safe "pp_graph_poly_hom_at"
    pp_graph_poly_hom_at
        :: Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | CBOR @{ cost, steps }@ preferred path through a CBOR lens graph.
foreign import ccall safe "pp_graph_preferred_path_at"
    pp_graph_preferred_path_at
        :: Ptr Word8 -> CSize
        -> Ptr Word8 -> CSize
        -> Ptr Word8 -> CSize
        -> Ptr VecU8
        -> IO CInt

-- | @f64@ conversion distance through a CBOR lens graph (INF if
-- unreachable).
foreign import ccall safe "pp_graph_conversion_distance_at"
    pp_graph_conversion_distance_at
        :: Ptr Word8 -> CSize
        -> Ptr Word8 -> CSize
        -> Ptr Word8 -> CSize
        -> Ptr CDouble
        -> IO CInt

-- ---------------------------------------------------------------------------
-- Parse (feature @full-parse@)

#ifdef PANPROTO_PARSE

-- | Create a parser registry handle.
foreign import ccall safe "pp_parse_registry_new"
    pp_parse_registry_new :: Ptr Word32 -> IO CInt

-- | Parse UTF-8 path plus source content into a fresh schema handle.
foreign import ccall safe "pp_parse_file_at"
    pp_parse_file_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- | Parse content under a named UTF-8 protocol into a fresh schema handle.
foreign import ccall safe "pp_parse_with_protocol_at"
    pp_parse_with_protocol_at
        :: Word32
        -> Ptr Word8 -> CSize
        -> Ptr Word8 -> CSize
        -> Ptr Word8 -> CSize
        -> Ptr Word32
        -> IO CInt

-- | Detect the protocol for a UTF-8 path; empty out-buffer if none.
foreign import ccall safe "pp_parse_detect_language_at"
    pp_parse_detect_language_at :: Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Emit a schema under a named protocol as source bytes.
foreign import ccall safe "pp_parse_emit_at"
    pp_parse_emit_at :: Word32 -> Ptr Word8 -> CSize -> Word32 -> Ptr VecU8 -> IO CInt

-- | Pretty-emit a schema under a named protocol as source bytes.
foreign import ccall safe "pp_parse_emit_pretty_at"
    pp_parse_emit_pretty_at :: Word32 -> Ptr Word8 -> CSize -> Word32 -> Ptr VecU8 -> IO CInt

-- | CBOR @Vec\<String\>@ of registry protocol names.
foreign import ccall safe "pp_parse_protocol_names"
    pp_parse_protocol_names :: Word32 -> Ptr VecU8 -> IO CInt

-- | CBOR @Vec\<String\>@ of available grammar names.
foreign import ccall safe "pp_parse_available_grammars"
    pp_parse_available_grammars :: Ptr VecU8 -> IO CInt

-- | Empty out-buffer if the emit-parse law holds, else divergence text.
foreign import ccall safe "pp_parse_check_emit_parse_at"
    pp_parse_check_emit_parse_at
        :: Word32 -> Ptr Word8 -> CSize -> Word32 -> Ptr VecU8 -> IO CInt

-- | Empty out-buffer if the parse-emit law holds, else divergence text.
foreign import ccall safe "pp_parse_check_parse_emit_at"
    pp_parse_check_parse_emit_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

#endif /* PANPROTO_PARSE */

-- ---------------------------------------------------------------------------
-- Project (feature @project@)

#ifdef PANPROTO_PROJECT

-- | Create a project builder handle.
foreign import ccall safe "pp_project_builder_new"
    pp_project_builder_new :: Ptr Word32 -> IO CInt

-- | Add a UTF-8 path plus content to the builder in place.
foreign import ccall safe "pp_project_add_file_at"
    pp_project_add_file_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> IO CInt

-- | Add a UTF-8 directory path to the builder in place.
foreign import ccall safe "pp_project_add_directory_at"
    pp_project_add_directory_at :: Word32 -> Ptr Word8 -> CSize -> IO CInt

-- | Build the project, returning a fresh project-schema handle.
foreign import ccall safe "pp_project_build"
    pp_project_build :: Word32 -> Ptr Word32 -> IO CInt

-- | Get the coproduct schema handle for a project.
foreign import ccall safe "pp_project_schema_get"
    pp_project_schema_get :: Word32 -> Ptr Word32 -> IO CInt

-- | CBOR @HashMap\<String, String\>@ path-to-protocol map for a project.
foreign import ccall safe "pp_project_protocol_map"
    pp_project_protocol_map :: Word32 -> Ptr VecU8 -> IO CInt

#endif /* PANPROTO_PROJECT */

-- ---------------------------------------------------------------------------
-- Git (feature @git@)

#ifdef PANPROTO_GIT

-- | Import a git repository at a UTF-8 path and revspec, returning a
-- fresh VCS repo handle plus a CBOR summary.
foreign import ccall safe "pp_git_import_at"
    pp_git_import_at
        :: Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr Word32 -> Ptr VecU8 -> IO CInt

#endif /* PANPROTO_GIT */
